--- a/templates/item/trait/header.hbs
+++ b/templates/item/trait/header.hbs
@@ -55,7 +55,7 @@
 
       {{#if (eq item.system.type 'power')}}
       {{!-- fragment --}}
-      {{> ($$ "item/power") item=item abilities=@root.config.abilities}}
+      {{> ($$ "item/power") item=item abilities=@root.abilities}}
       {{!-- fragment --}}
       {{/if}}
     </div>
