--- a/css/sdm.css
+++ b/css/sdm.css
@@ -287,6 +287,29 @@
   text-shadow: -0.7px -0.7px 0 var(--sdm-c-border), 0 -0.7px 0 var(--sdm-c-border), 0.7px -0.7px 0 var(--sdm-c-border), 0.7px 0 0 var(--sdm-c-border), 0.7px 0.7px 0 var(--sdm-c-border), 0 0.7px 0 var(--sdm-c-border), -0.7px 0.7px 0 var(--sdm-c-border), -0.7px 0 0 var(--sdm-c-border);
 }
 
+.sidebar-info ul.links {
+  gap: 0;
+  margin-top: 6px;
+}
+
+.sidebar-info ul.links li:not(:last-child)::after {
+  content: " • ";
+  margin-inline: 3px;
+  font-weight: bold;
+}
+
+.sidebar-info ul.links {
+  flex: 1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 0.5rem;
+  text-transform: uppercase;
+  font-size: var(--font-size-11);
+  justify-content: center;
+}
+
 .system-badge {
   display: flex;
   flex-direction: column;
@@ -367,6 +390,14 @@ input[type=radio]::after {
 @layer window-layer {
   * {
     scrollbar-color: var(--sdm-c-plum) transparent;
+  }
+  .unlist {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .unlist li {
+    margin: 0;
   }
   .die-label {
     display: inline-flex;
