feat: :sparkles: Send item card to chat when you right click it
Double clicking an item in the inventory will open its sheet

--- a/templates/actor/trait.hbs
+++ b/templates/actor/trait.hbs
@@ -5,7 +5,7 @@
   data-document-class='Item'
   data-tooltip='{{getItemTitle trait}}'
 >
-  <div class='item-name'>
+  <div class='item-name' style="cursor:pointer;" data-action='sendToChat'>
     <div class='item-image'>
       <img src='{{trait.img}}' width='24' height='24' />
     </div>
