--- a/css/sdm.css
+++ b/css/sdm.css
@@ -391,6 +391,98 @@ input[type=radio]::after {
   * {
     scrollbar-color: var(--sdm-c-plum) transparent;
   }
+  .description {
+    padding: 0.5rem;
+    border-radius: 3px;
+    overflow: hidden;
+  }
+  .description .summary {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .description .summary > img {
+    width: 32px;
+    height: 32px;
+  }
+  .description .summary .name-stacked {
+    flex: 1;
+    padding-right: 0.5rem;
+  }
+  .description .summary > i {
+    font-size: var(--font-size-14);
+    color: var(--color-text-secondary);
+    margin-right: 8px;
+    transition: all 250ms ease;
+  }
+  .description .details {
+    font-size: var(--font-size-13);
+    padding: 0;
+    display: grid;
+    grid-template-rows: 1fr;
+    transition: all 250ms ease;
+  }
+  .description .details > .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    overflow: hidden;
+    /* Immediate children vert margins
+     * are handled by the column gap */
+  }
+  .description .details > .wrapper > * {
+    margin-block: 0;
+  }
+  .description .details p {
+    margin: 0;
+  }
+  .description .details p:first-child {
+    padding-top: 0.5rem;
+  }
+  .gold-icon {
+    flex: 0 0 32px;
+    width: 32px;
+    height: 32px;
+  }
+  .name-stacked {
+    flex: 1;
+    display: flex;
+    min-height: 32px;
+    flex-direction: column;
+    justify-content: center;
+    line-height: normal;
+  }
+  .title {
+    font-size: var(--font-size-16);
+    font-weight: bold;
+    color: var(--color-text-primary);
+  }
+  .subtitle {
+    font-size: var(--font-size-11);
+    color: var(--color-text-secondary);
+  }
+  .collapsible.collapsed .fa-chevron-down,
+  .collapsible.smd-collapsible.collapsed .fa-chevron-down {
+    transform: rotate(-90deg);
+  }
+  .collapsible.collapsed .collapsible-content,
+  .collapsible.smd-collapsible.collapsed .collapsible-content {
+    grid-template-rows: 0fr;
+  }
+  .collapsible .fa-chevron-down,
+  .collapsible.smd-collapsible .fa-chevron-down {
+    transition: transform 250ms ease;
+  }
+  .collapsible .collapsible-content,
+  .collapsible.smd-collapsible .collapsible-content {
+    display: grid;
+    grid-template-rows: 1fr;
+    transition: grid-template-rows 250ms ease;
+  }
+  .collapsible .collapsible-content > .wrapper,
+  .collapsible.smd-collapsible .collapsible-content > .wrapper {
+    overflow: hidden;
+  }
   .unlist {
     list-style: none;
     padding: 0;
