--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -26,7 +26,7 @@
       {{/if}}
        {{#if (eq burden.type 'burden')}}
         <li class='item flexrow' data-item-id='{{burden._id}}' data-drag='true' data-document-class='Item' data-tooltip="{{getItemTitle burden}}">
-          <div class='item-name'>
+          <div class='item-name' style="cursor:pointer;" data-action='sendToChat'>
             <div class='item-image'>
               <img src='{{burden.img}}' width='24' height='24' />
             </div>
