--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -5,7 +5,7 @@
   data-document-class='Item'
   data-tooltip="{{getItemTitle item}}"
 >
-  <div class='item-name'>
+  <div class='item-name' style="cursor:pointer;" data-action='sendToChat'>
     <div class='item-image'>
       <img src='{{item.img}}' width='24' height='24' data-tooltip="{{item.name}}"/>
     </div>
