--- a/templates/chat/item-card.hbs
+++ b/templates/chat/item-card.hbs
@@ -1,23 +1,31 @@
-<div class="chat-card item-card" data-actor-id="{{ actor.id }}" data-item-id="{{ item.id }}">
+<div class="chat-card item-card" data-item-id="{{ item.id }}">
   {{!-- {{#if tokenId}}data-token-id="{{tokenId}}"{{/if}} {{#if isPower}}data-power-level="{{ item.system.power.level }}"{{/if}}> --}}
 
   {{!-- Collapsible Item Details --}}
-  <section class="card-header description collapsible">
+  <section class="card-header description collapsible {{#if collapsed}}collapsed{{/if}}">
 
     {{!-- Summary --}}
     <header class="summary" style="cursor:pointer;">
       <img class="gold-icon" src="{{ item.img }}" alt="{{ item.name }}">
       <div class="name-stacked border">
-          <span class="title">{{ item.name }}</span>
-          {{#if (eq item.system.type 'power')}}
-          <span class="subtitle">
-            {{localize 'SDM.PowerLevel'}}: {{item.system.power.level}}
-          </span>
-          {{else}}
-            <span class="subtitle">
-            {{localize (concat 'TYPES.Item.' type)}}
+          <div class="title flex flex-between">
+            <span>{{ item.name }}</span>
+            <span class="item-cost">{{costSubtitle}} </span>
+          </div>
+          <div class="subtitle flex flex-between">
+            <span>
+              {{#if (eq item.system.type 'power')}}
+                {{localize 'SDM.PowerLevel'}}: {{item.system.power.level}}
+              {{else}}
+                {{localize (concat 'TYPES.Item.' type)}}
+              {{/if}}
             </span>
-          {{/if}}
+            <span class="item-weight">
+              {{#if (ne weightSubtitle '')}}
+                {{weightSubtitle}} <i class="fa fa-weight-hanging subtitle"></i>
+              {{/if}}
+            </span>
+          </div>
       </div>
       <i class="fas fa-chevron-down fa-fw"></i>
     </header>
