feat: :sparkles: Add transports tab to caravan sheet

--- a/css/sdm.css
+++ b/css/sdm.css
@@ -12,6 +12,8 @@
   --sdm-c-ligh-border: #b5b3a4;
   --sdm-c-violet: #7F00FF;
   --sdm-c-ultraviolet: #b84eff;
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -63,6 +65,8 @@
   --color-border-highlight-alt: rgb(200, 100, 255);
   --color-scrollbar:rgb(200, 100, 255);
   --scrollbar-color:rgb(200, 100, 255);
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
 }
 
 :root {
@@ -88,6 +92,8 @@
   --sdm-c-ligh-border: #b5b3a4;
   --sdm-c-violet: #7F00FF;
   --sdm-c-ultraviolet: #b84eff;
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -139,6 +145,8 @@
   --color-border-highlight-alt: rgb(200, 100, 255);
   --color-scrollbar:rgb(200, 100, 255);
   --scrollbar-color:rgb(200, 100, 255);
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
 }
 
 :root {
@@ -158,6 +166,50 @@
 .rollable:hover, .rollable:focus {
   text-shadow: 0 0 10px var(--sdm-c-ultraviolet);
   cursor: pointer;
+}
+
+.sheet input[type=text],
+.sheet input[type=number],
+.sheet input[type=password],
+.sheet input[type=email],
+.sheet input[type=url],
+.sheet input[type=search],
+.sheet input[type=date],
+.sheet input[type=time],
+.sheet input[type=datetime-local],
+.sheet input[type=tel],
+.sheet textarea,
+.sheet select {
+  background: none;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #888; /* the underline */
+  padding: 2px 0 2px 2px;
+  outline: none;
+  box-shadow: none;
+  font-family: "Alegreya", sans-serif;
+}
+
+/* Disabled or readonly inputs */
+.sheet input:disabled,
+.sheet input[readonly],
+.sheet textarea:disabled,
+.sheet textarea[readonly],
+.sheet select:disabled {
+  background: rgba(0, 0, 0, 0.05); /* subtle grey background */
+  border-bottom: 1px solid #aaa; /* differentiate from normal */
+  color: #666;
+  padding: 2px 0 2px 4px;
+  font-family: "Alegreya", sans-serif;
+}
+
+/* On focus, accent color */
+.sheet input:focus,
+.sheet textarea:focus,
+.sheet select:focus {
+  border-bottom: 2px solid var(--sdm-c-theme);
+  box-shadow: none;
+  font-family: "Alegreya", sans-serif;
 }
 
 .mt-5 {
@@ -217,7 +269,7 @@
 }
 
 .application.sheet.sdm.actor.caravan {
-  min-width: 1500px;
+  min-width: 1200px;
   min-height: 820px;
   max-width: 1600px;
   max-height: 1520px;
@@ -875,6 +927,8 @@ input[type=radio]::after {
   --sdm-c-ligh-border: #b5b3a4;
   --sdm-c-violet: #7F00FF;
   --sdm-c-ultraviolet: #b84eff;
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -925,6 +979,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: rgb(200, 100, 255);
   --color-scrollbar:rgb(200, 100, 255);
   --scrollbar-color:rgb(200, 100, 255);
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
 }
 .sdm .item-form {
   font-family: "Baron Neue";
@@ -940,6 +996,12 @@ input[type=radio]::after {
 .sdm .sheet-header .profile-img {
   flex: 0 0 100px;
   height: 100px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+.sdm .sheet-header .caravan-profile-img {
+  flex: 0 0 150px;
+  height: 150px;
   margin-right: 10px;
   margin-top: 10px;
 }
@@ -988,6 +1050,9 @@ input[type=radio]::after {
   font-family: "Baron Neue";
   font-size: 14px;
 }
+.sdm .resource-content {
+  font-family: "Alegreya", sans-serif;
+}
 .sdm .ability {
   margin-bottom: 2px;
 }
@@ -1012,6 +1077,8 @@ input[type=radio]::after {
   --sdm-c-ligh-border: #b5b3a4;
   --sdm-c-violet: #7F00FF;
   --sdm-c-ultraviolet: #b84eff;
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -1062,6 +1129,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: rgb(200, 100, 255);
   --color-scrollbar:rgb(200, 100, 255);
   --scrollbar-color:rgb(200, 100, 255);
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
 }
 .sdm :root {
   --sdm-top-edit: 39px;
@@ -1274,6 +1343,8 @@ input[type=radio]::after {
   --sdm-c-ligh-border: #b5b3a4;
   --sdm-c-violet: #7F00FF;
   --sdm-c-ultraviolet: #b84eff;
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -1324,6 +1395,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: rgb(200, 100, 255);
   --color-scrollbar:rgb(200, 100, 255);
   --scrollbar-color:rgb(200, 100, 255);
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
 }
 .sdm :root {
   --sdm-top-edit: 39px;
@@ -1458,6 +1531,8 @@ input[type=radio]::after {
   --sdm-c-ligh-border: #b5b3a4;
   --sdm-c-violet: #7F00FF;
   --sdm-c-ultraviolet: #b84eff;
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
   --sdm-c-rust: #cc2f00;
   --sdm-c-pumpkin: #db6600;
   --sdm-c-amber: #e39e00;
@@ -1508,6 +1583,8 @@ input[type=radio]::after {
   --color-border-highlight-alt: rgb(200, 100, 255);
   --color-scrollbar:rgb(200, 100, 255);
   --scrollbar-color:rgb(200, 100, 255);
+  --sdm-c-theme: #00A2AB;
+  --sdm-c-table: #CDECEE;
 }
 .sdm :root {
   --sdm-top-edit: 39px;
@@ -1550,3 +1627,5 @@ input[type=radio]::after {
   top: var(--sdm-top-edit);
   left: var(--sdm-left-edit);
 }
+
+/*# sourceMappingURL=sdm.css.map */
