--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -12,11 +12,11 @@
   {{> ($$ "item/burden/header")}}
   {{/if}}
 
-  {{#if (eq item.type 'vehicle')}}
+  {{!-- {{#if (eq item.type 'vehicle')}}
   {{> ($$ "item/vehicle/header")}}
   {{/if}}
 
   {{#if (eq item.type 'mount')}}
     {{> ($$ "item/mount/header")}}
-  {{/if}}
+  {{/if}} --}}
 </div>
