--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -21,6 +21,13 @@
     margin-top: 10px;
   }
 
+  .caravan-profile-img {
+    flex: 0 0 150px;
+    height: 150px;
+    margin-right: 10px;
+    margin-top: 10px;
+  }
+
   .header-fields {
     flex: 1;
   }
