--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -41,6 +41,9 @@
   &.power-album {
     max-height: 600px;
   }
+  &.full-list {
+    max-height: unset;
+  }
 
   // Child lists
   .item-list {
@@ -83,6 +86,9 @@
   .item {
     align-items: center;
     padding: 0 2px; // to align with the header border
+    &.route-item {
+      padding: 4px 6px;
+    }
     border-bottom: 1px solid colors.$c-faint;
     &:last-child {
       border-bottom: none;
