--- a/templates/item/trait/header.hbs
+++ b/templates/item/trait/header.hbs
@@ -2,7 +2,7 @@
   <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' data-tooltip='{{item.name}}' />
   <div class='header-fields mt-10'>
     <div class='document-name'>
-      <input name='name' type='text' value='{{item.name}}' placeholder='Name' />
+      <input name='name' class="resource-label" type='text' value='{{item.name}}' placeholder='Name' />
     </div>
   </div>
 </header>
